Added class container to bids.handlebars

--- a/views/bids.handlebars
+++ b/views/bids.handlebars
@@ -8,6 +8,7 @@
             <a class="nav-item nav-link active" href="/user/logout">Logout</a>
         </div>
     </nav>
+    <div class="container">
     <h1>My Bids</h1>
     {{#if message}}
         <div>{{message}}</div> 
@@ -36,4 +37,5 @@
     {{else}}
     <div>No current bids</div>
     {{/if}}
+    </div>
 </main>
