--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -56,7 +56,7 @@
             <img class="card-img-top" src="../public/images/yakov.jpg" alt="Yakov Kazinets">
             <div class="card-body">
                 <h2 class="card-title">Yakov Kazinets</h2>
-                <p>CEO</p>
+                <p>Head of Design</p>
                 <p>Apes strong together</p>
                 <p>ykazinet@stevens.edu</p>
             </div>
